cmake_minimum_required(VERSION 4.0)
project(cpp_programming)

set(CMAKE_CXX_STANDARD 11)

add_executable(hello_world hello_world.cpp)
add_executable(data_types data_types_keywords.cpp)
add_executable(variables variables.cpp)
add_executable(variable_arrays variable_arrays.cpp)
add_executable(vector_arrays vector_arrays.cpp)
